# ucc-test

./: CMakeLists.txt  README.md  bench.hpp  data.hpp  main.cpp  ucc_exec.hpp  utils.hpp
conda/: ucc.yml
